--- a/dune
+++ b/dune
@@ -1,11 +1,6 @@
-(env
-  (dev
-    (flags (:standard -w -9 -principal))
-    (c_flags (:standard -Wall -pedantic -Wextra -Wunused)))
-  (release (ocamlopt_flags (:standard -O3))))
-  (executable
- (name main))
-
-  (alias
+(executable
+ (name main)
+ (libraries yojson ounit2 sqlite3 opium))
+(alias
  (name DEFAULT)
  (deps main.exe))
