--- a/lib/dune
+++ b/lib/dune
@@ -1,4 +1,4 @@
 (library 
   (name lib)
   (public_name lib)
-    (libraries yojson opium safepass sqlite3 lwt str))
+    (libraries yojson opium safepass sqlite3 lwt str dotenv))
