--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 ADMINS=reetuparikh,andrewzeng,andrewosorio,zachtegtmeier
-PASSWORDS=reetu123,andrew123,andrewo123,zach123
+PASSWORDS=Reetu123,Andrew123,Andrewo123,Zach123
 NAMES=Reetu,Andrew_Z,Andrew_O,Zach
+USER_KEY =0b2c1f4d2cea4f954b70b3d12683036c
